temp/onboarding_retrieve/dev/objects/Lead/fields/Puesto__c.field-meta.xml
<CustomField>
    <fullName>Puesto__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Puesto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>