temp/onboarding_retrieve/dev/objects/Lead/fields/QuienRefiere__c.field-meta.xml
<CustomField>
    <fullName>QuienRefiere__c</fullName>
    <description>Campo para saber quien esta referenciando segmento Wealt, privada y referidos</description>
    <label>¿Quien refiere?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Banqueros y consultores</fullName>
            </value>
            <value>
                <fullName>Empleados</fullName>
            </value>
            <value>
                <fullName>Referente Interno</fullName>
            </value>
            <value>
                <fullName>Referente Externo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>