temp/onboarding_retrieve/dev/objects/Lead/fields/Referenciador__c.field-meta.xml
<CustomField>
    <fullName>Referenciador__c</fullName>
    <description>Requerimiento 2 Junio 2023 &apos;&apos;Campaña referenciadores 2023&apos;&apos;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referenciador</label>
    <type>TextArea</type>
</CustomField>