temp/onboarding_retrieve/dev/objects/Lead/fields/Regi_n__c.field-meta.xml
<CustomField>
    <fullName>Regi_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Región</label>
    <referenceTo>BranchUnit</referenceTo>
    <relationshipLabel>Leads &amp; Referrals (Región)</relationshipLabel>
    <relationshipName>Leads_Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>