temp/onboarding_retrieve/dev/objects/Lead/fields/RFC_B__c.field-meta.xml
<CustomField>
    <fullName>RFC_B__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo RFC para FSC</description>
    <label>RFC</label>
    <type>Checkbox</type>
</CustomField>