temp/onboarding_retrieve/dev/objects/Lead/fields/Round_Robin_3__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_3__c</fullName>
    <formula>MOD(VALUE(Lead_Number__c),3)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Robin 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>