temp/onboarding_retrieve/dev/objects/Lead/fields/Soluciones_financieras_pasadas__c.field-meta.xml
<CustomField>
    <fullName>Soluciones_financieras_pasadas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Soluciones financieras pasadas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>