temp/onboarding_retrieve/dev/objects/Lead/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacto inicial</fullName>
                <default>true</default>
                <label>Contacto inicial</label>
            </value>
            <value>
                <fullName>Identificar Necesidades</fullName>
            </value>
            <value>
                <fullName>Presentación de oferta</fullName>
            </value>
            <value>
                <fullName>Solicitar documentación</fullName>
            </value>
            <value>
                <fullName>Formalización y Validación</fullName>
            </value>
            <value>
                <fullName>Cerrada Ganada</fullName>
            </value>
            <value>
                <fullName>Cerrada Perdida</fullName>
            </value>
            <value>
                <fullName>Recalendarización</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>