temp/onboarding_retrieve/dev/objects/Lead/fields/StateB__c.field-meta.xml
<CustomField>
    <fullName>StateB__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Estado Beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>