temp/onboarding_retrieve/dev/objects/Lead/fields/Suma_Monto__c.field-meta.xml
<CustomField>
    <fullName>Suma_Monto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suma Monto</label>
    <length>250</length>
    <type>Text</type>
</CustomField>