temp/onboarding_retrieve/dev/objects/Lead/fields/TiempoTotalentreAsignadoyContactado__c.field-meta.xml
<CustomField>
    <fullName>TiempoTotalentreAsignadoyContactado__c</fullName>
    <formula>TEXT(FLOOR(Minutos_entre_Asignado_y_Contactado__c / 1440)) &amp; &quot; días, &quot; &amp; 
TEXT(FLOOR(MOD(Minutos_entre_Asignado_y_Contactado__c, 1440) / 60)) &amp; &quot; horas, &quot; &amp; 
TEXT(ROUND(MOD(Minutos_entre_Asignado_y_Contactado__c, 60), 0)) &amp; &quot; minutos&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo Total entre Asignado y Contactado</label>
    <type>Text</type>
</CustomField>