temp/onboarding_retrieve/dev/objects/Lead/fields/Tipo_de_INE__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_INE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de INE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>