temp/onboarding_retrieve/dev/objects/Lead/fields/Transporte__c.field-meta.xml
<CustomField>
    <fullName>Transporte__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transporte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>