temp/onboarding_retrieve/dev/objects/Lead/fields/Validaci_n_de_documentaci_n_SAP__c.field-meta.xml
<CustomField>
    <fullName>Validaci_n_de_documentaci_n_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validación de documentación (SAP)</label>
    <type>Checkbox</type>
</CustomField>