temp/onboarding_retrieve/dev/objects/Lead/fields/Version_Form__c.field-meta.xml
<CustomField>
    <fullName>Version_Form__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Version Form</label>
    <length>250</length>
    <type>Text</type>
</CustomField>