temp/onboarding_retrieve/dev/objects/Lead/fields/Vigencia_ID__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vigencia ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>