temp/onboarding_retrieve/dev/objects/Lead/recordTypes/Casa_de_Bolsa_Posibilidad.recordType-meta.xml
<RecordType>
    <fullName>Casa_de_Bolsa_Posibilidad</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Casa de Bolsa</label>
</RecordType>