temp/onboarding_retrieve/dev/objects/Lead/recordTypes/Casa_de_Bolsa_Prospecto.recordType-meta.xml
<RecordType>
    <fullName>Casa_de_Bolsa_Prospecto</fullName>
    <active>true</active>
    <businessProcess>PS%2FCB Lead Process</businessProcess>
    <label>Casa de Bolsa Prospecto</label>
</RecordType>