temp/onboarding_retrieve/dev/objects/Lead/recordTypes/Personas_Morales.recordType-meta.xml
<RecordType>
    <fullName>Personas_Morales</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Personas Morales</label>
</RecordType>