temp/onboarding_retrieve/dev/objects/Lead/recordTypes/Prospecto_general_Privada.recordType-meta.xml
<RecordType>
    <fullName>Prospecto_general_Privada</fullName>
    <active>true</active>
    <businessProcess>Prospecto Privada</businessProcess>
    <label>Prospecto general (Privada)</label>
</RecordType>