temp/onboarding_retrieve/dev/objects/Lead/recordTypes/Seguros.recordType-meta.xml
<RecordType>
    <fullName>Seguros</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Seguros</label>
</RecordType>