temp/onboarding_retrieve/dev/objects/Lead/validationRules/AseSol_no_puede_cambiar_LeadOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>AseSol_no_puede_cambiar_LeadOwner</fullName>
    <active>true</active>
    <description>Un asesor soluciones no podrá cambiar el propietario de un prospecto.</description>
    <errorConditionFormula>$Profile.Name = &quot;Asesor Soluciones&quot; &amp;&amp; ISCHANGED( OwnerId )</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>No es posible continuar con el cambio de propietario.</errorMessage>
</ValidationRule>