temp/onboarding_retrieve/dev/objects/Lead/validationRules/F3_Formalizacion_Validacion_Seg.validationRule-meta.xml
<ValidationRule>
    <fullName>F3_Formalizacion_Validacion_Seg</fullName>
    <active>true</active>
    <description>Regla de validación para que el usuario no pueda avanzar a la siguiente etapa hasta haber recibido la bandera de creación de póliza de seguros</description>
    <errorConditionFormula>OR(
AND(
    ISPICKVAL(PRIORVALUE(Status), &apos;Formalización y Validación&apos;),
    OR(
       Poliza_de_Seguros_Creada__c  = FALSE 
       ),
    ISPICKVAL(Status, &apos;Cerrada Ganada&apos;),
    RecordType.DeveloperName = &apos;Seguros_Prospecto&apos;,
    NOT($Permission.bypassValidationRules)
    ),
AND(
    ISPICKVAL(PRIORVALUE(Status), &apos;Formalización y Validación&apos;),
    NOT(ISPICKVAL(Status, &apos;Formalización y Validación&apos;)),
    NOT(ISPICKVAL(Status, &apos;Cerrada Ganada&apos;)),
    NOT(ISPICKVAL(Status, &apos;Cerrada Perdida&apos;)),
    NOT(ISPICKVAL(Status, &apos;Recalendarización&apos;)),
    RecordType.DeveloperName = &apos;Seguros_Prospecto&apos;,
    NOT($Permission.bypassValidationRules)
))</errorConditionFormula>
    <errorMessage>Esperar a la creación del cliente y póliza de seguros en módulo asesor para poder avanzar a la siguiente etapa
Nota: No podrás avanzar a otra etapa diferente a &apos;Cerrada Ganada&apos;, &apos;Cerrada Perdida&apos; o &apos;Recalendarización&apos;</errorMessage>
</ValidationRule>