temp/onboarding_retrieve/dev/objects/Lead/validationRules/lastnamerequired.validationRule-meta.xml
<ValidationRule>
    <fullName>lastnamerequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( LastName )</errorConditionFormula>
    <errorMessage>Complete Apellido Paterno</errorMessage>
</ValidationRule>