temp/onboarding_retrieve/dev/objects/Lead/validationRules/PatrimTelefonoDiezDigitos.validationRule-meta.xml
<ValidationRule>
    <fullName>PatrimTelefonoDiezDigitos</fullName>
    <active>true</active>
    <description>Regla de validación donde el teléfono debe ir a 10 digitos.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Phone)),
  LEN(
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(
            SUBSTITUTE(
              Phone, &quot; &quot;, &quot;&quot;
            ), &quot;(&quot;, &quot;&quot;
          ), &quot;)&quot;, &quot;&quot;
        ), &quot;-&quot;, &quot;&quot;
      ), &quot;.&quot;, &quot;&quot;
    )
  ) &lt;&gt; 10
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Debe contener 10 dígitos el teléfono.</errorMessage>
</ValidationRule>