temp/onboarding_retrieve/dev/objects/Lead/validationRules/Postcode_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Postcode_is_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISBLANK(PostalCode),
    NOT(RecordType.DeveloperName = &apos;Seguros&apos;),
    NOT(RecordType.DeveloperName = &apos;Seguros_Prospecto&apos;)
    )</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Postcode is required</errorMessage>
</ValidationRule>