temp/onboarding_retrieve/dev/objects/Lead/validationRules/Stage_Mandatory_Field_No_Convertido.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Mandatory_Field_No_Convertido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(
 ISPICKVAL( Status , &quot;No Convertido&quot;) 
),
 ISPICKVAL( Motivo_No_Convertido__c ,&quot;&quot;)  
)</errorConditionFormula>
    <errorDisplayField>Motivo_No_Convertido__c</errorDisplayField>
    <errorMessage>Favor de ingresar Motivo de no Convertido</errorMessage>
</ValidationRule>