temp/onboarding_retrieve/dev/objects/Lead/listViews/Asignaci_n_Leads_Acelera_Academy.listView-meta.xml
<ListView>
    <fullName>Asignaci_n_Leads_Acelera_Academy</fullName>
    <columns>Campaign__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Edu – Acelera</value>
    </filters>
    <label>Asignación Leads Acelera Academy</label>
    <sharedTo>
        <group>Consultores_CAT</group>
    </sharedTo>
</ListView>