temp/onboarding_retrieve/dev/objects/Lead/listViews/FinServ__Open_Referrals_Im_Assigned.listView-meta.xml
<ListView>
    <fullName>FinServ__Open_Referrals_Im_Assigned</fullName>
    <columns>FULL_NAME</columns>
    <columns>FinServ__ExpressedInterest__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>FinServ__PotentialValue__c</columns>
    <columns>FinServ__ReferredByUser__c</columns>
    <columns>FinServ__ReferredByContact__c</columns>
    <columns>FinServ__ReferrerScore__c</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>StageName__c</field>
        <operation>notEqual</operation>
        <value>Cerrada Ganada,Cerrada Perdida</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.FinServ__BusinessReferral,Lead.FinServ__Referral</value>
    </filters>
    <label>Referidos Abiertos Asignado a Mí</label>
</ListView>