temp/onboarding_retrieve/dev/objects/Lead/listViews/Leads_Asignados_Referenciador_BrghtWest.listView-meta.xml
<ListView>
    <fullName>Leads_Asignados_Referenciador_BrghtWest</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>StageName__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Numero_Telefono__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Referenciador__c</columns>
    <columns>Campaign__c</columns>
    <columns>C_digo_Influencer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StageName__c</field>
        <operation>notEqual</operation>
        <value>Cerrada Ganada,Cerrada Perdida</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Asignado,Contactado,No Contactado,No Convertido,Convertido</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Referenciador</value>
    </filters>
    <filters>
        <field>Referenciador__c</field>
        <operation>equals</operation>
        <value>BrghtWest</value>
    </filters>
    <label>Leads Asignados Referenciador BrghtWest</label>
</ListView>