temp/onboarding_retrieve/dev/objects/Lead/listViews/Leads_de_Prueba_Marketing_Corporativo.listView-meta.xml
<ListView>
    <fullName>Leads_de_Prueba_Marketing_Corporativo</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FinServ__ExpressedInterest__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Inversion_Inicial__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>ecampill</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Leads de Prueba Marketing Corporativo</label>
    <sharedTo>
        <group>Grupo_Marketing_Corporativo</group>
    </sharedTo>
</ListView>