temp/onboarding_retrieve/dev/objects/Lead/listViews/Leads_que_no_han_sido_convertidos.listView-meta.xml
<ListView>
    <fullName>Leads_que_no_han_sido_convertidos</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>ProductoDeInteres__c</columns>
    <columns>Productos_ofertados__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Asignado,Contactado,No Contactado,No Convertido</value>
    </filters>
    <label>Leads que no han sido convertidos</label>
</ListView>