temp/onboarding_retrieve/dev/objects/Lead/listViews/Mis_Asistentes_a_Dia_Actinver_2023.listView-meta.xml
<ListView>
    <fullName>Mis_Asistentes_a_Dia_Actinver_2023</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>equals</operation>
        <value>Día Actinver 2023</value>
    </filters>
    <label>Mis Asistentes a Dia Actinver 2023</label>
</ListView>